--- a/src/datapreparation/split_events_to_csv.ipynb
+++ b/src/datapreparation/split_events_to_csv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 1,
    "id": "e9187f8c",
    "metadata": {},
    "outputs": [],
@@ -17,17 +17,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 2,
    "id": "37ab00c5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "rootdir = 'C:\\\\Users\\\\krish.vanapalli\\\\Documents\\\\Work\\\\KickStat\\\\open-data-master\\\\data\\\\events\\\\SubSet2\\\\'"
+    "rootdir = 'C:\\\\Users\\\\krish.vanapalli\\\\Documents\\\\Work\\\\KickStat\\\\open-data-master\\\\data\\\\events\\\\SubSet1\\\\'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 3,
    "id": "c3e54e7b",
    "metadata": {},
    "outputs": [],
@@ -36,12 +36,13 @@
     "dataframes_supported_entities[\"event\"] = pd.DataFrame()\n",
     "dataframes_supported_entities[\"event_relates_to_team\"] = pd.DataFrame()\n",
     "dataframes_supported_entities[\"possession_team\"] = pd.DataFrame()\n",
-    "dataframes_supported_entities[\"event_related_to_player\"] = pd.DataFrame()"
+    "dataframes_supported_entities[\"event_related_to_player\"] = pd.DataFrame()\n",
+    "dataframes_supported_entities[\"match_events\"] = pd.DataFrame()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 4,
    "id": "153ca0c1",
    "metadata": {},
    "outputs": [
@@ -49,246 +50,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15946\n",
-      "15956\n",
-      "15973\n",
-      "15978\n",
-      "15986\n",
-      "15998\n",
-      "16010\n",
-      "16023\n",
-      "16029\n",
-      "16056\n",
-      "16073\n",
-      "16079\n",
-      "16086\n",
-      "16095\n",
-      "16109\n",
-      "16120\n",
-      "16131\n",
-      "16136\n",
-      "16149\n",
-      "16157\n",
-      "16173\n",
-      "16182\n",
-      "16190\n",
-      "16196\n",
-      "16205\n",
-      "16215\n",
-      "16231\n",
-      "16240\n",
-      "16248\n",
-      "16265\n",
-      "16275\n",
-      "16289\n",
-      "16306\n",
-      "16317\n",
-      "18235\n",
-      "18236\n",
-      "18237\n",
-      "18240\n",
-      "18241\n",
-      "18242\n",
-      "18243\n",
-      "18244\n",
-      "18245\n",
-      "19714\n",
-      "19715\n",
-      "19716\n",
-      "19717\n",
-      "19718\n",
-      "19719\n",
-      "19720\n",
-      "19722\n",
-      "19723\n",
-      "19724\n",
-      "19725\n",
-      "19726\n",
-      "19727\n",
-      "19728\n",
-      "19729\n",
-      "19730\n",
-      "19731\n",
-      "19732\n",
-      "19733\n",
-      "19734\n",
-      "19735\n",
-      "19736\n",
-      "19737\n",
-      "19738\n",
-      "19739\n",
-      "19740\n",
-      "19741\n",
-      "19742\n",
-      "19743\n",
-      "19744\n",
-      "19745\n",
-      "19746\n",
-      "19747\n",
-      "19748\n",
-      "19749\n",
-      "19750\n",
-      "19751\n",
-      "19752\n",
-      "19753\n",
-      "19754\n",
-      "19755\n",
-      "19756\n",
-      "19757\n",
-      "19758\n",
-      "19759\n",
-      "19760\n",
-      "19761\n",
-      "19762\n",
-      "19763\n",
-      "19764\n",
-      "19765\n",
-      "19766\n",
-      "19767\n",
-      "19768\n",
-      "19769\n",
-      "19770\n",
-      "19771\n",
-      "19772\n",
-      "19773\n",
-      "19774\n",
-      "19775\n",
-      "19776\n",
-      "19777\n",
-      "19778\n",
-      "19779\n",
-      "19780\n",
-      "19781\n",
-      "19782\n",
-      "19783\n",
-      "19784\n",
-      "19785\n",
-      "19786\n",
-      "19787\n",
-      "19788\n",
-      "19789\n",
-      "19790\n",
-      "19791\n",
-      "19792\n",
-      "19793\n",
-      "19794\n",
-      "19795\n",
-      "19796\n",
-      "19797\n",
-      "19798\n",
-      "19799\n",
-      "19800\n",
-      "19801\n",
-      "19802\n",
-      "19803\n",
-      "19804\n",
-      "19805\n",
-      "19806\n",
-      "19807\n",
-      "19808\n",
-      "19809\n",
-      "19810\n",
-      "19811\n",
-      "19813\n",
-      "19814\n",
-      "19815\n",
-      "19816\n",
-      "19817\n",
-      "19818\n",
-      "19819\n",
-      "19820\n",
-      "19821\n",
-      "19822\n",
-      "22912\n",
-      "22921\n",
-      "22924\n",
-      "22926\n",
-      "22930\n",
-      "22933\n",
-      "22934\n",
-      "22936\n",
-      "22939\n",
-      "22940\n",
-      "22942\n",
-      "22943\n",
-      "22944\n",
-      "22945\n",
-      "22948\n",
-      "22949\n",
-      "22955\n",
-      "22956\n",
-      "22961\n",
-      "22962\n",
-      "22963\n",
-      "22964\n",
-      "22966\n",
-      "22973\n",
-      "22974\n",
-      "22980\n",
-      "22981\n",
-      "22983\n",
-      "22984\n",
-      "68311\n",
-      "68312\n",
-      "68313\n",
-      "68314\n",
-      "68315\n",
-      "68316\n",
-      "68317\n",
-      "68318\n",
-      "68319\n",
-      "68320\n",
-      "68321\n",
-      "68322\n",
-      "68323\n",
-      "68324\n",
-      "68325\n",
-      "68326\n",
-      "68327\n",
-      "68328\n",
-      "68329\n",
-      "68330\n",
-      "68331\n",
-      "68332\n",
-      "68333\n",
-      "68334\n",
-      "68335\n",
-      "68336\n",
-      "68337\n",
-      "68338\n",
-      "68339\n",
-      "68340\n",
-      "68341\n",
-      "68342\n",
-      "68343\n",
-      "68344\n",
-      "68345\n",
-      "68346\n",
-      "68347\n",
-      "68348\n",
-      "68350\n",
-      "68351\n",
-      "68352\n",
-      "68353\n",
-      "68354\n"
+      "7298\n"
      ]
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
+     "ename": "NameError",
+     "evalue": "name 'event_df' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_21932\\3122657656.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m             \u001b[0mdf_dictionary_tmp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mevent_df\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 24\u001b[1;33m             \u001b[0mdataframes_supported_entities\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"event\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mdataframes_supported_entities\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"event\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdf_dictionary_tmp\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mignore_index\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     25\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     26\u001b[0m             \u001b[0mdf_dictionary_tmp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mevent_relates_to_team_df\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\util\\_decorators.py\u001b[0m in \u001b[0;36mwrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    309\u001b[0m                     \u001b[0mstacklevel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mstacklevel\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    310\u001b[0m                 )\n\u001b[1;32m--> 311\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    312\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    313\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\reshape\\concat.py\u001b[0m in \u001b[0;36mconcat\u001b[1;34m(objs, axis, join, ignore_index, keys, levels, names, verify_integrity, sort, copy)\u001b[0m\n\u001b[0;32m    358\u001b[0m     )\n\u001b[0;32m    359\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 360\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0mop\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_result\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    361\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    362\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\reshape\\concat.py\u001b[0m in \u001b[0;36mget_result\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    593\u001b[0m                 \u001b[0mmgrs_indexers\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_mgr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindexers\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    594\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 595\u001b[1;33m             new_data = concatenate_managers(\n\u001b[0m\u001b[0;32m    596\u001b[0m                 \u001b[0mmgrs_indexers\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnew_axes\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mconcat_axis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbm_axis\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    597\u001b[0m             )\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\internals\\concat.py\u001b[0m in \u001b[0;36mconcatenate_managers\u001b[1;34m(mgrs_indexers, axes, concat_axis, copy)\u001b[0m\n\u001b[0;32m    240\u001b[0m             \u001b[0mfastpath\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mblk\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdtype\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mvalues\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    241\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 242\u001b[1;33m             \u001b[0mvalues\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_concatenate_join_units\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mjoin_units\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mconcat_axis\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    243\u001b[0m             \u001b[0mfastpath\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mFalse\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    244\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\internals\\concat.py\u001b[0m in \u001b[0;36m_concatenate_join_units\u001b[1;34m(join_units, concat_axis, copy)\u001b[0m\n\u001b[0;32m    581\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    582\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 583\u001b[1;33m         \u001b[0mconcat_values\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mconcat_compat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mto_concat\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mconcat_axis\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    584\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    585\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mconcat_values\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\dtypes\\concat.py\u001b[0m in \u001b[0;36mconcat_compat\u001b[1;34m(to_concat, axis, ea_compat_axis)\u001b[0m\n\u001b[0;32m    149\u001b[0m                 \u001b[0mkinds\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;34m\"o\"\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    150\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 151\u001b[1;33m     \u001b[0mresult\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mto_concat\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0maxis\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    152\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[1;34m\"b\"\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mkinds\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mresult\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkind\u001b[0m \u001b[1;32min\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m\"i\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"u\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"f\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    153\u001b[0m         \u001b[1;31m# GH#39817\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Roaming\\Python\\Python39\\site-packages\\numpy\\core\\overrides.py\u001b[0m in \u001b[0;36mconcatenate\u001b[1;34m(*args, **kwargs)\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_18724\\1581384140.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 23\u001b[1;33m             \u001b[0mdf_dictionary_tmp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mevent_df\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     24\u001b[0m             \u001b[0mdataframes_supported_entities\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"event\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mdataframes_supported_entities\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"event\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdf_dictionary_tmp\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mignore_index\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'event_df' is not defined"
      ]
     }
    ],
@@ -312,17 +85,8 @@
     "            play_pattern_id = event[\"play_pattern\"][\"id\"]\n",
     "            play_pattern_name = event[\"play_pattern\"][\"name\"]\n",
     "            possession_team = event[\"possession_team\"]\n",
-    "            team = event[\"team\"]\n",
+    "            team = event[\"team\"]            \n",
     "            \n",
-    "            \n",
-    "            df_dictionary_tmp = pd.DataFrame([event_df])\n",
-    "            dataframes_supported_entities[\"event\"] = pd.concat([dataframes_supported_entities[\"event\"], df_dictionary_tmp], ignore_index=True)                                                                     \n",
-    "            \n",
-    "            df_dictionary_tmp = pd.DataFrame([event_relates_to_team_df])\n",
-    "            dataframes_supported_entities[\"event_relates_to_team\"] = pd.concat([dataframes_supported_entities[\"event_relates_to_team\"], df_dictionary_tmp], ignore_index=True)                                                                     \n",
-    "            \n",
-    "            df_dictionary_tmp = pd.DataFrame([possession_team_df])\n",
-    "            dataframes_supported_entities[\"possession_team\"] = pd.concat([dataframes_supported_entities[\"possession_team\"], df_dictionary_tmp], ignore_index=True)                                                                     \n",
     "            \n",
     "            if \"player\" in event:\n",
     "                player = event[\"player\"]\n",
@@ -382,7 +146,21 @@
     "                       \"position_id\": position_id, \"position_name\": position_name, \"location\": location, \"duration\": duration, \"under_pressure\": under_pressure, \\\n",
     "                       \"off_camera\": off_camera, \"out\": out, \"related_events\": related_events, \"bad_behaviour_card_id\": bad_behaviour_card_id, \"bad_behaviour_card_name\": bad_behaviour_card_name }\n",
     "            event_relates_to_team_df = {\"evnet_id\": event_id, \"team_id\": team[\"id\"]}\n",
-    "            possession_team_df = {\"evnet_id\": event_id, \"team_id\": possession_team[\"id\"]}                                                                                         "
+    "            possession_team_df = {\"evnet_id\": event_id, \"team_id\": possession_team[\"id\"]} \n",
+    "            \n",
+    "            match_events_df = {\"match_id\": match_id, \"event_id\": event_id}\n",
+    "            df_dictionary_tmp = pd.DataFrame([match_events_df])\n",
+    "            dataframes_supported_entities[\"match_events\"] = pd.concat([dataframes_supported_entities[\"match_events\"], df_dictionary_tmp], ignore_index=True)                                                                     \n",
+    "            \n",
+    "            df_dictionary_tmp = pd.DataFrame([event_df])\n",
+    "            dataframes_supported_entities[\"event\"] = pd.concat([dataframes_supported_entities[\"event\"], df_dictionary_tmp], ignore_index=True)                                                                     \n",
+    "            \n",
+    "            df_dictionary_tmp = pd.DataFrame([event_relates_to_team_df])\n",
+    "            dataframes_supported_entities[\"event_relates_to_team\"] = pd.concat([dataframes_supported_entities[\"event_relates_to_team\"], df_dictionary_tmp], ignore_index=True)                                                                     \n",
+    "            \n",
+    "            df_dictionary_tmp = pd.DataFrame([possession_team_df])\n",
+    "            dataframes_supported_entities[\"possession_team\"] = pd.concat([dataframes_supported_entities[\"possession_team\"], df_dictionary_tmp], ignore_index=True)                                                                     \n",
+    "            "
    ]
   },
   {
